Added 3 languages ​​(English, Turkish, Arabic) to the main pages

--- a/index-ar.html
+++ b/index-ar.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="ltr">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kahil Logistic</title>
+    <title>كاهل للخدمات اللوجستية</title>
     <link rel="stylesheet" href="/css/style.min.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@400;500;600&display=swap');
+        *{font-family: 'Noto Sans Arabic', system-ui, sans-serif;text-align: right;}
+        .footer-desc{text-align: right !important;}
+    </style>
 </head>
 
 <body>
@@ -18,17 +23,17 @@
                     d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z" />
             </svg>
         </button>
-        <div class="link-title first">Select language</div>
+        <div class="link-title first">حدد اللغات</div>
         <div class="links">
-            <a title="English" class="active" href="/index.html">English</a>
-            <a title="العربية" href="/index-ar.html">العربية</a>
+            <a title="English" href="/index.html">English</a>
+            <a title="العربية" class="active" href="/index-ar.html">العربية</a>
             <a title="Türkçe" href="/index-tr.html">Türkçe</a>
         </div>
-        <div class="link-title">Pages</div>
+        <div class="link-title">الصفحات</div>
         <div class="links">
-            <a title="Home" class="active" href="/index.html">Home</a>
-            <a title="About" href="#!">About</a>
-            <a title="Services" href="#!">Services</a>
+            <a title="مسكن" class="active" href="/index-ar.html">مسكن</a>
+            <a title="حول" href="#!">حول</a>
+            <a title="خدمات" href="#!">خدمات</a>
         </div>
     </div>
     <nav>
@@ -44,9 +49,9 @@
         </div>
         <div>
             <div class="links">
-                <a title="Home" href="/index.html">Home</a>
-                <a title="About" href="#!">About</a>
-                <a title="Services" href="#!">Services</a>
+                <a title="مسكن" href="/index-ar.html">مسكن</a>
+                <a title="حول" href="#!">حول</a>
+                <a title="خدمات" href="#!">خدمات</a>
             </div>
             <button role="button" class="side-button">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
@@ -58,10 +63,9 @@
     </nav>
     <header>
         <div class="header">
-            <h1 class="header-title">Kahil Logistic Company</h1>
-            <p class="header-desc">Instant Solution to All Your Logistics Needs. The most reasonable price. Save Time
-                and Compare. Call Me Now!</p>
-            <a title="Call Me Now!" href="tel:+905307628300" class="mx-phone-button">
+            <h1 class="header-title">شركة كاهل للخدمات اللوجستية</h1>
+            <p class="header-desc">حلول فوريه لجميع احتياجاتك اللوجستية. أكثر الأسعار المعقولة. وفر الوقت والمقارنة. اتصل بي الآن</p>
+            <a title="اتصل بي الآن" href="tel:+905307628300" class="mx-phone-button">
                 <img src="/images/marwah-e1650023155749.webp" alt="Marwah Kahil" />
                 <div class="icon-and-span-item">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
@@ -75,79 +79,65 @@
         </div>
     </header>
     <section class="company">
-        <h2 class="section-title">Our Company Branches</h2>
-        <p class="section-desc">XPO Logistics is a global shipping and contract logistics services organization with
-            over 1,530 sites in over 30 countries.</p>
+        <h2 class="section-title">فروع الشركة</h2>
+        <p class="section-desc">كحيل اللوجستية هي منظمة عالمية لخدمات الشحن والتعاقد مع أكثر من 1،530 موقعًا في أكثر من 30 دولة.</p>
         <div class="row">
             <div class="image-card">
                 <img src="https://www.kahillogistic.com/images/company1.jpg" alt="Company 1">
-                <div class="image-layer"><span>Istanbul</span></div>
+                <div class="image-layer"><span>إسطنبول</span></div>
             </div>
             <div class="image-card">
                 <img src="https://www.kahillogistic.com/images/company2.jpg" alt="Company 1">
-                <div class="image-layer"><span>Ankara</span></div>
+                <div class="image-layer"><span>أنقره</span></div>
             </div>
             <div class="image-card">
                 <img src="https://www.kahillogistic.com/images/company3.jpg" alt="Company 1">
-                <div class="image-layer"><span>Mersin</span></div>
+                <div class="image-layer"><span>مرسين</span></div>
             </div>
         </div>
     </section>
     <section class="services">
-        <h2 class="section-title">Services We Offer</h2>
-        <p class="section-desc">This is the point where the logistics providers come to the rescue.</p>
+        <h2 class="section-title">الخدمات التي نقدمها</h2>
+        <p class="section-desc">هذه هي النقطة التي يأتي فيها مقدمو الخدمات اللوجستية إلى الإنقاذ.</p>
         <div class="row">
             <div class="card">
-                <div class="card-title">Warehousing services</div>
-                <div class="card-desc">The product is typically held at a warehouse or is consecutively transported
-                    through various warehouses before it is shipped. Many companies prefer their warehouses; whereas
-                    many companies work hand in hand with third-party logistics service providers. They tend to receive
-                    ship and store out products on behalf of their clients.</div>
+                <div class="card-title">خدمات التخزين</div>
+                <div class="card-desc">عادة ما يتم الاحتفاظ بالمنتج في مستودع أو يتم نقله على التوالي عبر مستودعات مختلفة قبل شحنه. تفضل العديد من الشركات مستودعاتها ؛ بينما تعمل العديد من الشركات جنبًا إلى جنب مع مزودي الخدمات اللوجستية من الأطراف الثالثة. إنهم يميلون إلى استلام المنتجات وتخزينها نيابة عن عملائهم.</div>
             </div>
             <div class="card">
-                <div class="card-title">Warehousing services</div>
-                <div class="card-desc">The product is typically held at a warehouse or is consecutively transported
-                    through various warehouses before it is shipped. Many companies prefer their warehouses; whereas
-                    many companies work hand in hand with third-party logistics service providers. They tend to receive
-                    ship and store out products on behalf of their clients.</div>
+                <div class="card-title">شحن البضائع</div>
+                <div class="card-desc">يتم شحن العناصر الكبيرة والطلبات الكبيرة في الغالب بمساعدة شحن البضائع. يتضمن ذلك مجموعة من المركبات المعينة مثل السفن والقطارات والبضائع والشاحنات وغيرها الكثير. تشمل خدمات الشحن أيضًا خدمات التجفيف التي تتيح نقل طلبك من الموانئ إلى مستودعات معينة للتخزين.</div>
             </div>
             <div class="card">
-                <div class="card-title">Warehousing services</div>
-                <div class="card-desc">The product is typically held at a warehouse or is consecutively transported
-                    through various warehouses before it is shipped. Many companies prefer their warehouses; whereas
-                    many companies work hand in hand with third-party logistics service providers. They tend to receive
-                    ship and store out products on behalf of their clients.</div>
+                <div class="card-title">الشحن عن طريق البريد السريع</div>
+                <div class="card-desc">يعد الشحن بالبريد السريع أحد أشهر خدمات الشحن التي تختارها الشركة. تحظى شركات الشحن مثل UPS و FedEx وما إلى ذلك بشعبية كبيرة الآن. يتم الاستفادة من خدمة البريد السريع في الغالب للطلبات الصغيرة والمنتجات الهشة للغاية والتي تتطلب عناية إضافية أثناء التسليم. تتمتع خدمات البريد السريع بوتيرة أسرع من شحن البضائع.</div>
             </div>
         </div>
     </section>
     <section class="facilities">
-        <h2 class="section-title">Our Facilities</h2>
-        <p class="section-desc">The objective of the typology is to distinguish logistics facilities according to
-            their activities.</p>
+        <h2 class="section-title">منشأتنا</h2>
+        <p class="section-desc">الهدف من التصنيف هو تمييز المرافق اللوجستية وفقًا لأنشطتها.</p>
         <div class="row">
             <div class="image-round">
                 <img src="https://www.kahillogistic.com/images/cover5.jpg" alt="Cover 5">
-                <div class="image-header">Post-purchase Services</div>
-                <div class="image-text">The objective of the typology is to distinguish logistics facilities according
-                    to their activities.</div>
+                <div class="image-header">خدمات ما بعد الشراء</div>
+                <div class="image-text">الهدف من التصنيف هو تمييز المرافق اللوجستية وفقًا لأنشطتها.</div>
             </div>
             <div class="image-round">
                 <img src="https://www.kahillogistic.com/images/cover6.jpg" alt="Cover 5">
-                <div class="image-header">Largest port services</div>
-                <div class="image-text">The objective of the typology is to distinguish logistics facilities according
-                    to their activities.</div>
+                <div class="image-header">أكبر خدمات الموانئ</div>
+                <div class="image-text">الهدف من التصنيف هو تمييز المرافق اللوجستية وفقًا لأنشطتها.</div>
             </div>
             <div class="image-round">
                 <img src="https://www.kahillogistic.com/images/cover7.jpg" alt="Cover 5">
-                <div class="image-header">Fast Shipping Anywhere</div>
-                <div class="image-text">The objective of the typology is to distinguish logistics facilities according
-                    to their activities.</div>
+                <div class="image-header">الشحن السريع في أي مكان</div>
+                <div class="image-text">الهدف من التصنيف هو تمييز المرافق اللوجستية وفقًا لأنشطتها.</div>
             </div>
         </div>
     </section>
     <section class="testimonials">
-        <h2 class="section-title">What Our Clinets Says</h2>
-        <p class="section-desc">We belive what our clients say...</p>
+        <h2 class="section-title">ماذا يقول عملاؤنا</h2>
+        <p class="section-desc">...نحن نصدق ما يقوله عملاؤنا</p>
         <div class="row">
             <div class="comment">
                 <div class="user-image">
@@ -155,7 +145,7 @@
                 </div>
                 <div>
                     <div class="user-name">
-                        <span>Hadel Alqadii</span>
+                        <span>هديل القاضي</span>
                         <div class="stars">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                                 <path
@@ -179,11 +169,9 @@
                             </svg>
                         </div>
                     </div>
-                    <div class="comment-text">Start day work first off all security guard check attendance and
-                        information
-                        take to head office then check warehouse cleaners and workers report to head office after then
-                        one
-                        round check to warehouse</div>
+                    <div class="comment-text">
+                        يبدأ يوم العمل أولاً ، أولاً وقبل كل شيء ، يتم فحص الحضور وحضور جميع حراس الأمن والمعلومات إلى المكتب الرئيسي ، ثم التحقق من عمال النظافة في المستودعات وإبلاغ العمال إلى المكتب الرئيسي بعد ذلك فحص جولة واحدة إلى المستودع
+                    </div>
                 </div>
             </div>
             <div class="comment">
@@ -192,7 +180,7 @@
                 </div>
                 <div>
                     <div class="user-name">
-                        <span>Salem Alselwi</span>
+                        <span>سليم الصلوي</span>
                         <div class="stars">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                                 <path
@@ -212,25 +200,20 @@
                             </svg>
                         </div>
                     </div>
-                    <div class="comment-text">Start day work first off all security guard check attendance and
-                        information
-                        take to head office then check warehouse cleaners and workers report to head office after then
-                        one
-                        round check to warehouse</div>
+                    <div class="comment-text">
+                        يبدأ يوم العمل أولاً ، أولاً وقبل كل شيء ، يتم فحص الحضور وحضور جميع حراس الأمن والمعلومات إلى المكتب الرئيسي ، ثم التحقق من عمال النظافة في المستودعات وإبلاغ العمال إلى المكتب الرئيسي بعد ذلك فحص جولة واحدة إلى المستودع
+                    </div>
                 </div>
             </div>
         </div>
     </section>
     <section class="cta">
-        <h3 class="cta-text">Be One Of Our Clients Anywhere From The World</h3>
-        <a href="tel:+905307628300">Contact Us</a>
+        <h3 class="cta-text">كن أحد عملائنا في أي مكان من العالم</h3>
+        <a href="tel:+905307628300">اتصل بنا</a>
     </section>
     <footer>
-        <div class="footer-title">About Us</div>
-        <div class="footer-desc">Kahil Logistics has completed the acquisition of the majority of Ingram Micro’s
-            Commerce & Lifecycle
-            Services (CLS) business. With our combined business, we are in our strongest position ever
-            and we continue down a successful path to become a Top 5 global logistics player.</div>
+        <div class="footer-title">معلومات عنا</div>
+        <div class="footer-desc">أكملت شركة كاهل اللوجستية الاستحواذ على غالبية أعمال خدمات دورة الحياة التجارية (سي ال اس) التابعة لشركة أنجرام ميكرو. من خلال أعمالنا المشتركة ، نحن في أقوى مركز لنا على الإطلاق ونواصل السير على طريق ناجح لنصبح أفضل 5 لاعبين عالميين في مجال الخدمات اللوجستية.</div>
         <a class="linkedin" href="https://www.linkedin.com/in/marwah-kahil">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                 <path
