--- a/index-tr.html
+++ b/index-tr.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kahil Logistic</title>
+    <title>Kahil Lojistik</title>
     <link rel="stylesheet" href="/css/style.min.css">
 </head>
 
@@ -18,23 +18,23 @@
                     d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z" />
             </svg>
         </button>
-        <div class="link-title first">Select language</div>
+        <div class="link-title first">Dil seçin</div>
         <div class="links">
-            <a title="English" class="active" href="/index.html">English</a>
+            <a title="English" href="/index.html">English</a>
             <a title="العربية" href="/index-ar.html">العربية</a>
-            <a title="Türkçe" href="/index-tr.html">Türkçe</a>
+            <a title="Türkçe" class="active" href="#!">Türkçe</a>
         </div>
-        <div class="link-title">Pages</div>
+        <div class="link-title">Sayfalar</div>
         <div class="links">
-            <a title="Home" class="active" href="/index.html">Home</a>
-            <a title="About" href="#!">About</a>
-            <a title="Services" href="#!">Services</a>
+            <a title="Anasayfa" class="active" href="#!">Anasayfa</a>
+            <a title="Hakkımızda" href="#!">Hakkımızda</a>
+            <a title="Hizmetler" href="#!">Hizmetler</a>
         </div>
     </div>
     <nav>
         <div class="flex">
-            <a title="Kahil Logistic" href="#!" class="logo">
-                <img src="/images/logo.webp" alt="Kahil Logistic">
+            <a title="Kahil Lojistik" href="#!" class="logo">
+                <img src="/images/logo.webp" alt="Kahil Lojistik">
             </a>
             <div class="languages">
                 <a title="English" href="/index.html">English</a>
@@ -44,9 +44,9 @@
         </div>
         <div>
             <div class="links">
-                <a title="Home" href="/index.html">Home</a>
-                <a title="About" href="#!">About</a>
-                <a title="Services" href="#!">Services</a>
+                <a title="Anasayfa" href="#!">Anasayfa</a>
+                <a title="Hakkımızda" href="#!">Hakkımızda</a>
+                <a title="Hizmetler" href="#!">Hizmetler</a>
             </div>
             <button role="button" class="side-button">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
@@ -58,10 +58,10 @@
     </nav>
     <header>
         <div class="header">
-            <h1 class="header-title">Kahil Logistic Company</h1>
-            <p class="header-desc">Instant Solution to All Your Logistics Needs. The most reasonable price. Save Time
-                and Compare. Call Me Now!</p>
-            <a title="Call Me Now!" href="tel:+905307628300" class="mx-phone-button">
+            <h1 class="header-title">Kahil Lojistik Şirketi</h1>
+            <p class="header-desc">Tüm Lojistik İhtiyaçlarınıza Anında Çözüm. En makul fiyat. Zamandan Tasarruf Edin ve
+                Karşılaştırın. Şimdi beni ara!</p>
+            <a title="Şimdi beni ara!" href="tel:+905307628300" class="mx-phone-button">
                 <img src="/images/marwah-e1650023155749.webp" alt="Marwah Kahil" />
                 <div class="icon-and-span-item">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
@@ -75,13 +75,13 @@
         </div>
     </header>
     <section class="company">
-        <h2 class="section-title">Our Company Branches</h2>
-        <p class="section-desc">XPO Logistics is a global shipping and contract logistics services organization with
-            over 1,530 sites in over 30 countries.</p>
+        <h2 class="section-title">Şubelerimiz</h2>
+        <p class="section-desc">Kahil Lojistik, 30'dan fazla ülkede 1.530'dan fazla tesisi olan küresel bir nakliye ve
+            sözleşmeli lojistik hizmetleri organizasyonudur.</p>
         <div class="row">
             <div class="image-card">
                 <img src="https://www.kahillogistic.com/images/company1.jpg" alt="Company 1">
-                <div class="image-layer"><span>Istanbul</span></div>
+                <div class="image-layer"><span>İstanbul</span></div>
             </div>
             <div class="image-card">
                 <img src="https://www.kahillogistic.com/images/company2.jpg" alt="Company 1">
@@ -94,60 +94,56 @@
         </div>
     </section>
     <section class="services">
-        <h2 class="section-title">Services We Offer</h2>
-        <p class="section-desc">This is the point where the logistics providers come to the rescue.</p>
+        <h2 class="section-title">Sunduğumuz Hizmetler</h2>
+        <p class="section-desc">Bu, lojistik sağlayıcıların kurtarmaya geldiği noktadır.</p>
         <div class="row">
             <div class="card">
-                <div class="card-title">Warehousing services</div>
-                <div class="card-desc">The product is typically held at a warehouse or is consecutively transported
-                    through various warehouses before it is shipped. Many companies prefer their warehouses; whereas
-                    many companies work hand in hand with third-party logistics service providers. They tend to receive
-                    ship and store out products on behalf of their clients.</div>
+                <div class="card-title">Depolama servisi</div>
+                <div class="card-desc">Ürün tipik olarak bir depoda tutulur veya sevk edilmeden önce çeşitli depolardan
+                    sırayla taşınır. Birçok firma depolarını tercih ediyor; oysa birçok şirket üçüncü taraf lojistik
+                    hizmet sağlayıcılarla el ele çalışıyor. Müşterileri adına ürünleri teslim alma ve depolama
+                    eğilimindedirler.</div>
             </div>
             <div class="card">
-                <div class="card-title">Warehousing services</div>
-                <div class="card-desc">The product is typically held at a warehouse or is consecutively transported
-                    through various warehouses before it is shipped. Many companies prefer their warehouses; whereas
-                    many companies work hand in hand with third-party logistics service providers. They tend to receive
-                    ship and store out products on behalf of their clients.</div>
+                <div class="card-title">Yük Taşımacılığı</div>
+                <div class="card-desc">Büyük parçalar ve büyük siparişler çoğunlukla navlun nakliyesi yardımıyla
+                    gönderilir. Bu, gemiler, trenler, kargolar, kamyonlar ve daha pek çok araç gibi belirli araçların
+                    bir kombinasyonunu içerir. Nakliye hizmetleri ayrıca, siparişinizin depolama için limanlardan
+                    belirli antrepolara taşınmasını sağlayan taşıma hizmetlerini de içerir.</div>
             </div>
             <div class="card">
-                <div class="card-title">Warehousing services</div>
-                <div class="card-desc">The product is typically held at a warehouse or is consecutively transported
-                    through various warehouses before it is shipped. Many companies prefer their warehouses; whereas
-                    many companies work hand in hand with third-party logistics service providers. They tend to receive
-                    ship and store out products on behalf of their clients.</div>
+                <div class="card-title">Kurye Nakliye</div>
+                <div class="card-desc">Kurye nakliyesi, şirketin tercih ettiği en popüler nakliye hizmetlerinden
+                    biridir. UPS, FedEx vb. gibi nakliye şirketleri artık çok popüler. Kurye hizmeti daha çok küçük
+                    siparişler ve çok kırılgan olan ve teslimat sırasında ekstra özen gerektiren ürünler için
+                    geçerlidir. Kurye hizmetleri, yük taşımacılığından daha hızlıdır.</div>
             </div>
         </div>
     </section>
     <section class="facilities">
-        <h2 class="section-title">Our Facilities</h2>
-        <p class="section-desc">The objective of the typology is to distinguish logistics facilities according to
-            their activities.</p>
+        <h2 class="section-title">Tesislerimiz</h2>
+        <p class="section-desc">Tipolojinin amacı, lojistik tesisleri faaliyetlerine göre ayırt etmektir.</p>
         <div class="row">
             <div class="image-round">
                 <img src="https://www.kahillogistic.com/images/cover5.jpg" alt="Cover 5">
-                <div class="image-header">Post-purchase Services</div>
-                <div class="image-text">The objective of the typology is to distinguish logistics facilities according
-                    to their activities.</div>
+                <div class="image-header">Satın Alma Sonrası Hizmetler</div>
+                <div class="image-text">Tipolojinin amacı, lojistik tesisleri faaliyetlerine göre ayırt etmektir.</div>
             </div>
             <div class="image-round">
                 <img src="https://www.kahillogistic.com/images/cover6.jpg" alt="Cover 5">
-                <div class="image-header">Largest port services</div>
-                <div class="image-text">The objective of the typology is to distinguish logistics facilities according
-                    to their activities.</div>
+                <div class="image-header">En büyük liman hizmetleri</div>
+                <div class="image-text">Tipolojinin amacı, lojistik tesisleri faaliyetlerine göre ayırt etmektir.</div>
             </div>
             <div class="image-round">
                 <img src="https://www.kahillogistic.com/images/cover7.jpg" alt="Cover 5">
-                <div class="image-header">Fast Shipping Anywhere</div>
-                <div class="image-text">The objective of the typology is to distinguish logistics facilities according
-                    to their activities.</div>
+                <div class="image-header">Her Yere Hızlı Kargo</div>
+                <div class="image-text">Tipolojinin amacı, lojistik tesisleri faaliyetlerine göre ayırt etmektir.</div>
             </div>
         </div>
     </section>
     <section class="testimonials">
-        <h2 class="section-title">What Our Clinets Says</h2>
-        <p class="section-desc">We belive what our clients say...</p>
+        <h2 class="section-title">Müşterilerimiz Ne Diyor?</h2>
+        <p class="section-desc">Müşterilerimizin söylediklerine inanıyoruz...</p>
         <div class="row">
             <div class="comment">
                 <div class="user-image">
@@ -179,11 +175,11 @@
                             </svg>
                         </div>
                     </div>
-                    <div class="comment-text">Start day work first off all security guard check attendance and
-                        information
-                        take to head office then check warehouse cleaners and workers report to head office after then
-                        one
-                        round check to warehouse</div>
+                    <div class="comment-text">
+                        Tüm güvenlik görevlisinden önce güne başlayın, katılım ve bilgilerin merkez ofise alınıp
+                        alınmadığını kontrol edin, ardından depo temizlikçilerini kontrol edin ve işçiler merkez ofise
+                        rapor verin, ardından depoya bir yuvarlak kontrol yapın
+                    </div>
                 </div>
             </div>
             <div class="comment">
@@ -212,25 +208,25 @@
                             </svg>
                         </div>
                     </div>
-                    <div class="comment-text">Start day work first off all security guard check attendance and
-                        information
-                        take to head office then check warehouse cleaners and workers report to head office after then
-                        one
-                        round check to warehouse</div>
+                    <div class="comment-text">
+                        Tüm güvenlik görevlisinden önce güne başlayın, katılım ve bilgilerin merkez ofise alınıp
+                        alınmadığını kontrol edin, ardından depo temizlikçilerini kontrol edin ve işçiler merkez ofise
+                        rapor verin, ardından depoya bir yuvarlak kontrol yapın
+                    </div>
                 </div>
             </div>
         </div>
     </section>
     <section class="cta">
-        <h3 class="cta-text">Be One Of Our Clients Anywhere From The World</h3>
-        <a href="tel:+905307628300">Contact Us</a>
+        <h3 class="cta-text">Dünya'nın Her Yerinden Müşterimiz Olun!</h3>
+        <a href="tel:+905307628300">Bize Ulaşın</a>
     </section>
     <footer>
-        <div class="footer-title">About Us</div>
-        <div class="footer-desc">Kahil Logistics has completed the acquisition of the majority of Ingram Micro’s
-            Commerce & Lifecycle
-            Services (CLS) business. With our combined business, we are in our strongest position ever
-            and we continue down a successful path to become a Top 5 global logistics player.</div>
+        <div class="footer-title">Hakkımızda</div>
+        <div class="footer-desc">Kahil Logistics, Ingram Micro'nun Ticaret ve Yaşam Döngüsü Hizmetleri (CLS) işinin
+            çoğunluğunun satın alımını tamamladı.
+            Birleştirilmiş işimizle, şimdiye kadarki en güçlü pozisyonumuzdayız ve ilk 5 küresel lojistik oyuncusu
+            olma yolunda başarılı bir yolda ilerliyoruz.</div>
         <a class="linkedin" href="https://www.linkedin.com/in/marwah-kahil">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                 <path
